minor syntax fixes to css; trying pointerdown instead of click in index.js to see if it solves some issues on iPhones

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -563,7 +563,7 @@ body {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (width >= 400px) {
+@media (min-width: 400px) {
   :root {
     --width-master: 25rem;
     --gif-variable: 3rem;
@@ -571,7 +571,7 @@ body {
   }
 }
 
-@media only screen and (width >= 600px) {
+@media (min-width: 600px) {
   :root {
     --width-master: 26rem;
     --height-messages: 6.5rem;
@@ -622,7 +622,7 @@ body {
   }
 }
 
-@media only screen and (width >= 800px) {
+@media (min-width: 800px) {
   :root {
     --width-master: 27rem;
   }
